<resources>
	<string name="twitter_api_key">4brIKIIcpkRPYk8fzZqlaK5aQ</string>
	<string name="twitter_api_secret">YANCRyMlm8tJIHufsGKiIqfv1wMc6zB6kFo2gtDU1349zaJriJ</string>
	<string name="app_name">Club Record</string>
	<string name="about_text">Clubhouse Record Version %s\n\nBug reports, comments and suggestions: chrec@gsxip.com\n\n</string>
	<string name="about">About…</string>
	<string name="login">Login</string>
	<string name="suggested_to_follow">Suggested people to follow:</string>
	<string name="phone_number">Phone Number</string>
	<string name="enter_your_phone">Enter your phone #</string>
	<string name="sms_code">Code from SMS</string>
	<string name="resend_code_message">Did not receive it?</string>
	<string name="resend_code_button">Resend</string>
	<string name="or">or</string>
	<string name="call_code_button">Call</string>
	<string name="next">Next  &#10230;</string>
	<string name="warning">Warning!</string>
	<!-- string name="warning_text">This is an <b>unofficial</b> app. Using this might get your Clubhouse account permanently banned. Proceed at your own risk.</string -->
	<string name="i_understand">I understand</string>
	<string name="loading">Loading…</string>
	<string name="error_loading">Error connecting to server and loading data</string>
	<string name="error_loading_code">Error %d loading data</string>
	<string name="error_loading_code_reason">Error %d : %s</string>
	<string name="waitlist">Wait list</string>
	<string name="waitlist_text">You\'re waiting for someone to invite you to Clubhouse. Your account is currently inactive.</string>
	<string name="log_out">Log out</string>
	<string name="ongoing_call">Ongoing conversation</string>
	<string name="leave_room">✌ Leave</string>
	<string name="leave_room_hand">✌</string>
	<string name="mute_room">Mute</string>
	<string name="unmte_room">Unmute</string>
	<string name="record">&#128308;</string>
	<string name="stop">⬛</string>
	<string name="speaker_on">&#128266;</string>
	<string name="speaker_off">&#128263;</string>
	<string name="addressbook">&#128214;</string>
	<string name="plus">&#43;</string>
	<string name="join_this_room">Join this room?</string>
	<string name="join">Join</string>
	<string name="cancel">Cancel</string>
	<string name="followed_by_speakers">Followed by the speakers</string>
	<string name="others_in_room">Others in the room</string>
	<string name="confirm_join_as_speaker">%s invites you to join as a speaker, accept?</string>
	<string name="register">Register</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="username">Username</string>
	<string name="complete_registration">Complete registration</string>
	<string name="all_fields_are_required">All fields are required</string>
	<string name="username_limit">Username can\'t be longer than 16 characters</string>
	<string name="register_warning">Registration in this <b>unofficial</b> app is as experimental a feature as the app itself. There\'s always a non-zero possibility of a ban if you don\'t use the official app to register. It would work better if you borrow an iOS device from someone, but you could still try registering from Android.\n\nPlease be aware that you\'ll only be able to change your name <b>once</b> after you register. Please use your real name.</string>
	<string name="welcome_to_clubhouse">Welcome to Clubhouse!</string>
	<plurals name="followers">
		<item quantity="one">%d follower</item>
		<item quantity="other">%d followers</item>
	</plurals>
	<plurals name="following">
		<item quantity="one">%d following</item>
		<item quantity="other">%d following</item>
	</plurals>
	<plurals name="members">
		<item quantity="one">%d member</item>
		<item quantity="other">%d members</item>
	</plurals>
	<plurals name="invites">
		<item quantity="one">You have %d invite</item>
		<item quantity="other">You have %d invites</item>
	</plurals>
	<string name="mutual_follows_one">Followed by %s</string>
	<string name="mutual_follows_two">Followed by %s and %s</string>
	<string name="mutual_follows_other">Followed by %s, %s and %d others</string>
	<string name="invite_button_label">Invite</string>
	<string name="invite_phone_hint">Enter your phone #</string>
	<string name="follows_you">Follows you</string>
	<string name="follow">Follow</string>
	<string name="following">Following</string>
	<string name="followers_title">Followers</string>
	<string name="following_title">Following</string>
	<string name="notifications_title">Notifications</string>
	<string name="friends_title">Friends</string>
	<string name="confirm_unfollow">Unfollow <b>%s</b>?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="joined_date">Joined %s</string>
	<string name="invited_by">Nominated by %s</string>
	<string name="update_bio">Update bio</string>
	<string name="update_name">Update name</string>
	<string name="update_username">Update username</string>
	<string name="save">Save</string>
	<string name="event_not_started">This event hasn\'t started yet</string>
	<string name="event_expired">This event has already ended</string>
	<string name="log_in_to_activate">Please log in again to activate your account.</string>
	<string name="ok">OK</string>
	<string name="online">Online now!</string>
	<string name="last_active_m">%dm</string>
	<string name="last_active_h">%dh</string>
	<string name="last_active_d">%dd</string>
	<string name="num">%d</string>
	<string name="start_room">+ Start a room</string>
	<string name="add_topic">+ Add a Topic</string>
	<string name="open_room">&#127758; Open</string>
	<string name="social_room">&#128101; Social</string>
	<string name="closed_room">&#128274; Closed</string>
	<string name="start_room_text">Start a room %s</string>
	<string name="start_room_with_topic_text">Start a room %s with the topic \"%s\"</string>
	<string name="open_to_all">open to everyone</string>
	<string name="open_to_follow">with people I follow</string>
	<string name="open_to_choose">for people I choose</string>
	<string name="lets_go">🎉 Let\'s go</string>
	<string name="choose_people">Choose People…</string>
	<string name="add_a_topic">Add a Topic</string>
	<string name="set_topic">Set Topic</string>
	<string name="add_a_topic_2">e.g. Raising wolves - good idea?</string>
	<string name="add_a_topic_hint">(60 chars)</string>
	<string name="end_room">End Room</string>
	<string name="start_a_room_title">START A ROOM</string>
	<string name="play">&#9654;</string>
	<string name="send_to">Send to</string>
    <string name="filedatestr">E MMM dd yyyy, HH:mm:ss</string>
	<string name="lens">&#128269;</string>
	<string name="phone">&#128241;</string>
	<string name="mic">&#127908;</string>
	<string name="no_invites">You have no invites. Please try again later.</string>
	<string name="invite_text">Who\'s a great potential addition to Clubouse?\n You\'ll get credit for the invite on their profile!</string>
	<string name="explore">Explore</string>
	<string name="search_hint">Find People and Clubs</string>
	<string name="people">People</string>
	<string name="clubs">Clubs</string>
	<string name="member_of">Member of</string>
	<string name="add_twitter">Add Twitter</string>
	<string name="add_instagram">Add Instagram</string>
	<string name="confirm_unlink_instagram_title">Unlink Instagram</string>
	<string name="confirm_unlink_instagram">Are you sure want to unlink Instagram?</string>
	<string name="instagram_linked">Instagram linked, reopen page to see</string>
	<string name="accept_club_membership">Accept %s membership?</string>
	<string name="ping_to_room">Ping someone into the room</string>
	<string name="ping">Ping</string>
	<string name="pinged">Invited %s to the room</string>
	<string name="pinged_notifsoff">Invited %s to the room, but it seems like their notifications are off, so you may want to follow up with a text</string>
	<string name="interests">Interests</string>
	<string name="interests_title">Add your interests so we can begin to personalize Clubhouse for you.\nInterests are private to you.</string>
	<string name="raised_hands">Raised Hands</string>
	<string name="no_one_raised_hands">No one has their hand raised yet!</string>
	<string name="off">Off</string>
	<string name="limited_to_followed">Limited to Followed by the Speakers</string>
	<string name="open_to_everyone">Open to Everyone</string>
	<string name="edit">Edit</string>
	<string name="hand_raises_are_off">Hand raises are turned off</string>
	<string name="move_to_audience">Move to audience</string>
	<string name="you_are_last_moderator">You\'re the last moderator</string>
	<string name="you_can_leave_quietly">You can leave quietly and a new moderator will be chosen from current speakers.</string>
	<string name="last_leave_quietly">Leave Quietly</string>
	<string name="last_end_the_room">End the room</string>
	<string name="are_you_sure">Are you sure?</string>
	<plurals name="end_are_you_sure">
		<item quantity="one">Ending the room will permanently end this conversation for last %d participant.</item>
		<item quantity="other">Ending the room will permanently end this conversation for all %d participants.</item>
	</plurals>
	<string name="invite_to_speak">Invite to speak</string>
	<string name="hand_normal">&#9995;</string>
	<string name="hand_medium">✋🏽</string>
	<string name="moderator">✱ %s</string>
	<string name="events_title">Upcoming for you</string>
</resources>
