<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/refresh_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFF">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">

			<me.grishka.appkit.views.UsableRecyclerView
				android:id="@+id/list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>

			<include
				android:id="@+id/empty"
				layout="@layout/appkit_empty" />

		</FrameLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:orientation="horizontal"
			android:paddingStart="8dp"
			android:paddingTop="20dp"
			android:paddingEnd="8dp"
			android:paddingBottom="10dp">

			<Button
				android:id="@+id/leave"
				style="@style/Widget.Button.Grey"
				android:layout_width="wrap_content"
				android:layout_height="42dp"
				android:text="@string/leave_room" />

			<View
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:layout_weight="1" />

			<Button
				android:id="@+id/speaker"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="0dp"
				android:text="@string/speaker_off" />

			<FrameLayout
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical">

				<Button
					android:id="@+id/record"
					style="@style/Widget.Button.Grey"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:minWidth="0dp"
					android:text="@string/record"
					android:textSize="10sp" />

				<TextView
					android:id="@+id/recordTimer"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom|center_horizontal"
					android:text="00:00"
					android:textSize="10sp"
					android:visibility="gone" />
			</FrameLayout>

			<View
				android:layout_width="0dp"
				android:layout_height="1dp"
				android:layout_weight="1" />

			<ImageButton
				android:id="@+id/raiseCtrl"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="42dp"
				android:minHeight="42dp"
				android:scaleType="centerCrop"
				android:src="@drawable/ic_documenthand"
				android:visibility="gone"
				tools:visibility="visible" />

			<Button
				android:id="@+id/ping"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="42dp"
				android:minHeight="42dp"
				android:text="@string/plus"
				android:textColor="@android:color/black"
				android:textSize="24sp" />

			<ImageButton
				android:id="@+id/raise"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="42dp"
				android:minHeight="42dp"
				android:scaleType="center"
				android:src="@drawable/ic_raised_hand_transparent" />

			<!-- Button
				android:id="@+id/raise"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="42dp"
				android:minHeight="42dp"
				android:text="@string/hand_normal" / -->

			<ImageButton
				android:id="@+id/mute"
				style="@style/Widget.Button.Grey"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_gravity="center_vertical"
				android:minWidth="42dp"
				android:minHeight="42dp"
				android:src="@drawable/ic_mic_off" />

		</LinearLayout>

	</LinearLayout>

		<FrameLayout
			android:id="@+id/raise_hands_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"
			tools:visibility="visible">

			<View
				android:id="@+id/back_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:focusable="true" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:background="@android:color/white"
				android:orientation="vertical"
				android:paddingStart="8dp"
				android:paddingTop="20dp"
				android:paddingEnd="8dp"
				android:paddingBottom="10dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">

					<ImageView
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:src="@drawable/ic_documenthand" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/raised_hands"
							android:textSize="16sp"
							android:textStyle="bold" />

						<TextView
							android:id="@+id/hand_raise_setting"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/open_to_everyone" />

					</LinearLayout>

					<TextView
						android:id="@+id/raise_hands_edit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginStart="10dp"
						android:layout_marginEnd="15dp"
						android:text="@string/edit"
						android:textColor="@color/chblue" />
				</LinearLayout>

				<FrameLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/hand_raise_background"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:gravity="center_horizontal"
						android:text="@string/no_one_raised_hands"
						android:textColor="@android:color/darker_gray" />

					<!--me.grishka.appkit.views.UsableRecyclerView
						android:id="@+id/raised_hands_grid"
						android:layout_width="match_parent"
						android:layout_height="180dp"/ -->

					<GridView
						android:id="@+id/raised_hands_grid"
						android:layout_width="match_parent"
						android:layout_height="180dp"
						android:horizontalSpacing="10dp"
						android:numColumns="auto_fit"
						android:verticalSpacing="10dp" />

				</FrameLayout>
			</LinearLayout>

		</FrameLayout>

	</FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>